# lambdajam-web-functions

./: README.md  index.html  talk.md
charlotte-scotty/: charlotte-scotty.cabal  charlotte-scotty.lock-7.10.2
charlotte-scotty/main/: charlotte-scotty.hs
charlotte-wai/: charlotte-wai.cabal  charlotte-wai.lock-7.10.2
charlotte-wai/main/: charlotte-wai.hs
charlotte-wai/src/Charlotte/: App.hs  Wai.hs
